<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View_Recipe_Activity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E6FEE0">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E7FFE1"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo"
                android:contentDescription="@string/logo" />

            <ImageButton
                android:id="@+id/log_out_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#00FFFFFF"
                android:clickable="true"
                android:contentDescription="@string/options"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/log_out_icon" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="#E6FEE0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#00FFFFFF"
                android:clickable="true"
                android:contentDescription="@string/back"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/like_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5"
                app:srcCompat="@drawable/back_icon" />

            <ImageButton
                android:id="@+id/like_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#00FFFFFF"
                android:clickable="true"
                android:contentDescription="@string/like"
                app:layout_constraintBottom_toBottomOf="@+id/back_button"
                app:layout_constraintEnd_toStartOf="@+id/save_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/back_button"
                app:layout_constraintTop_toTopOf="@+id/back_button"
                app:srcCompat="@drawable/like_icon" />

            <ImageButton
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#00FFFFFF"
                android:clickable="true"
                android:contentDescription="@string/saved"
                app:layout_constraintBottom_toBottomOf="@+id/like_button"
                app:layout_constraintEnd_toStartOf="@+id/dislike_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/like_button"
                app:layout_constraintTop_toTopOf="@+id/like_button"
                app:layout_constraintVertical_bias="0.461"
                app:srcCompat="@drawable/save_icon" />

            <ImageButton
                android:id="@+id/dislike_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#00FFFFFF"
                android:clickable="true"
                android:contentDescription="@string/dislike"
                app:layout_constraintBottom_toBottomOf="@+id/save_button"
                app:layout_constraintEnd_toStartOf="@+id/view_profile_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/save_button"
                app:layout_constraintTop_toTopOf="@+id/save_button"
                app:layout_constraintVertical_bias="0.538"
                app:srcCompat="@drawable/dislike_icon" />

            <ImageButton
                android:id="@+id/view_profile_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#00FFFFFF"
                android:clickable="true"
                android:contentDescription="@string/view_profile"
                app:layout_constraintBottom_toBottomOf="@+id/dislike_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/dislike_button"
                app:layout_constraintTop_toTopOf="@+id/dislike_button"
                app:layout_constraintVertical_bias="0.533"
                app:srcCompat="@drawable/profile_icon" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView_recipe_image"
                android:layout_width="0dp"
                android:layout_height="284dp"
                android:background="#D8D8D8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.555"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/recipe_image"
                android:contentDescription="@string/recipe_image" />

            <ImageView
                android:id="@+id/imageView_blue_rectangle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="24dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView_recipe_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/dislike_like_pane"
                android:contentDescription="@string/like_pane" />

            <TextView
                android:id="@+id/textView_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/tienne"
                android:text="@string/description"
                android:textColor="#73816F"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView15" />

            <TextView
                android:id="@+id/textView_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/tienne"
                android:text="@string/title"
                android:textColor="#73816F"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView_recipe_image" />

            <ImageView
                android:id="@+id/imageView_small_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/imageView_blue_rectangle"
                app:layout_constraintEnd_toStartOf="@+id/textView_like_number"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imageView_blue_rectangle"
                app:layout_constraintTop_toTopOf="@+id/imageView_blue_rectangle"
                app:srcCompat="@drawable/like_small_icon"
                android:contentDescription="@string/like" />

            <TextView
                android:id="@+id/textView_like_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/tienne"
                android:text="@string/like_num"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="@+id/imageView_blue_rectangle"
                app:layout_constraintEnd_toStartOf="@+id/imageView_small_dislike"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imageView_small_like"
                app:layout_constraintTop_toTopOf="@+id/imageView_blue_rectangle" />

            <ImageView
                android:id="@+id/imageView_small_dislike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/imageView_blue_rectangle"
                app:layout_constraintEnd_toStartOf="@+id/textView_dislike_number"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView_like_number"
                app:layout_constraintTop_toTopOf="@+id/imageView_blue_rectangle"
                app:srcCompat="@drawable/dislike_small_icon"
                android:contentDescription="@string/dislike" />

            <TextView
                android:id="@+id/textView_dislike_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/tienne"
                android:text="@string/dislike_num"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="@+id/imageView_blue_rectangle"
                app:layout_constraintEnd_toStartOf="@+id/imageView_blue_rectangle"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imageView_small_dislike"
                app:layout_constraintTop_toTopOf="@+id/imageView_blue_rectangle" />

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="25dp"
                android:layout_height="27dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView_profile_username"
                app:layout_constraintEnd_toStartOf="@+id/textView_profile_username"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView_profile_username"
                app:layout_constraintVertical_bias="0.5"
                app:srcCompat="@drawable/profile_color_icon"
                android:contentDescription="@string/profile_icon" />

            <TextView
                android:id="@+id/textView_profile_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/tienne"
                android:text="@string/papaki_username"
                android:textColor="#73806F"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imageView15"
                app:layout_constraintTop_toBottomOf="@+id/textView_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>